--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Etch A Sketch</title>
   <link rel="stylesheet" type="text/css" href="styles/style.css">
-  <script type="text/javascript" src="js/main.js"defer></script>
+  <script type="text/javascript" src="js/main.js" defer></script>
 </head>
 <body>
-  <h1 class="title">Etch A Sketch Pad</h1>
+  <h1 class="title">Etch A Sketch</h1>
+  <div class="container">
+    <div id="grid" class="grid">
+
+    </div>
+  </div>
 </body>
 </html>
