--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <h1 class="title">Etch A Sketch</h1>
   <div class="container">
+    <button id="user-input" class="btn user-input" value="Grid Size">Grid Size</button>
     <div id="grid" class="grid">
 
     </div>
